created about page

--- a/app/views/admin/mains/index.html.erb
+++ b/app/views/admin/mains/index.html.erb
@@ -36,26 +36,26 @@
   <tbody>
     <% @mains.each do |main| %>
       <tr>
-        <td><%= main.hero_image %></td>
+        <td><%= image_tag main.hero_image.to_s %></td>
         <td><%= main.hero_title %></td>
-        <td><%= main.stratum_1_image %></td>
+        <td><%= image_tag main.stratum_1_image.to_s %></td>
         <td><%= main.stratum_1_title %></td>
         <td><%= main.stratum_1_copy %></td>
         <td><%= main.stratum_1_cta %></td>
         <td><%= main.stratum_1_link %></td>
-        <td><%= main.practice_area_1_image %></td>
+        <td><%= image_tag main.practice_area_1_image.to_s %></td>
         <td><%= main.practice_area_1_title %></td>
         <td><%= main.practice_area_1_copy %></td>
         <td><%= main.practice_area_1_link %></td>
-        <td><%= main.practice_area_2_image %></td>
+        <td><%= image_tag main.practice_area_2_image.to_s %></td>
         <td><%= main.practice_area_2_title %></td>
         <td><%= main.practice_area_2_copy %></td>
         <td><%= main.practice_area_2_link %></td>
-        <td><%= main.practice_area_3_image %></td>
+        <td><%= image_tag main.practice_area_3_image.to_s %></td>
         <td><%= main.practice_area_3_title %></td>
         <td><%= main.practice_area_3_copy %></td>
         <td><%= main.practice_area_3_link %></td>
-        <td><%= main.stratum_2_image %></td>
+        <td><%= image_tag main.stratum_2_image.to_s %></td>
         <td><%= main.stratum_2_title %></td>
         <td><%= main.stratum_2_copy %></td>
         <td><%= main.stratum_2_cta %></td>
