--- a/app/views/layouts/_header.haml
+++ b/app/views/layouts/_header.haml
@@ -10,4 +10,4 @@
         %li.nav-item
           = active_link_to "Careers", careers_path, class: "nav-link", :class_active => 'current'
         %li.nav-item
-          = active_link_to "About", "#", class: "nav-link", :class_active => 'current'
+          = active_link_to "About", about_path, class: "nav-link", :class_active => 'current'
