--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -10,4 +10,6 @@
 	<li><%= link_to 'Manage Jobs', admin_jobs_url %></li>
 	<li><%= link_to 'Manage Team Page', admin_teams_path %></li>
 	<li><%= link_to 'Manage Employees', admin_employees_path %></li>
+	<li><%= link_to 'Manage About Us', admin_abouts_path %></li>
+	<li><%= link_to 'Manage Contact Us', admin_contacts_path %></li>
 </ul>
