created contact page

--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -7,7 +7,7 @@
 				%li.footer-item
 					= link_to "Insights", root_path, class: "footer-link"
 				%li.footer-item
-					= link_to "Contact", root_path, class: "footer-link"
+					= link_to "Contact", contact_path, class: "footer-link"
 		.small-12.medium-4.columns
 			%ul{style: "float: right;"}
 				%li.footer-item
