--- a/app/views/admin/contacts/index.html.erb
+++ b/app/views/admin/contacts/index.html.erb
@@ -18,6 +18,7 @@
         <td><%= contact.address %></td>
         <td><%= contact.phone %></td>
         <td><%= contact.email %></td>
+        <td><%= link_to 'Edit', edit_admin_contact_path(contact) %></td>
       </tr>
     <% end %>
   </tbody>
