updated links, started styling about us

--- a/app/views/admin/contacts/edit.html.erb
+++ b/app/views/admin/contacts/edit.html.erb
@@ -2,5 +2,4 @@
 
 <%= render 'form' %>
 
-<%= link_to 'Show', @contact %> |
-<%= link_to 'Back', contacts_path %>
+<%= link_to 'Back', admin_contacts_path %>
