insights page, testing AWS variables

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -12,4 +12,5 @@
 	<li><%= link_to 'Manage Employees', admin_employees_path %></li>
 	<li><%= link_to 'Manage About Us', admin_abouts_path %></li>
 	<li><%= link_to 'Manage Contact Us', admin_contacts_path %></li>
+	<li><%= link_to 'Manage Insights', admin_insights_path %></li>
 </ul>
