--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -5,7 +5,7 @@
 				%li.footer-item
 					= link_to "Meet the Team", team_path, class: "footer-link"
 				%li.footer-item
-					= link_to "Insights", root_path, class: "footer-link"
+					= link_to "Insights", insights_path, class: "footer-link"
 				%li.footer-item
 					= link_to "Contact", contact_path, class: "footer-link"
 		.small-12.medium-4.columns
