--- a/app/views/insights/index.html.erb
+++ b/app/views/insights/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= insight.title %></td>
         <td><%= insight.author %></td>
         <td><%= insight.blurb %></td>
-        <td><%= insight.article %></td>
+        <td><%= link_to "Download", insight.article.url, :target => "_Blank" %></td>
       </tr>
     <% end %>
   </tbody>
