updated text, updated careers/team controller for new

--- a/app/views/admin/employees/index.html.erb
+++ b/app/views/admin/employees/index.html.erb
@@ -27,7 +27,7 @@
         <td><%= employee.twitter %></td>
         <td><%= employee.facebook %></td>
         <td><%= link_to 'Edit', edit_admin_employee_path(employee) %></td>
-        <td><%= link_to 'Destroy', admin_employee_path(employee), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Delete', admin_employee_path(employee), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
