--- a/app/views/admin/insights/index.html.erb
+++ b/app/views/admin/insights/index.html.erb
@@ -21,7 +21,7 @@
         <td><%= insight.blurb %></td>
         <td><%= insight.article %></td>
         <td><%= link_to 'Edit', edit_admin_insight_path(insight) %></td>
-        <td><%= link_to 'Destroy', admin_insight_path(insight), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Delete', admin_insight_path(insight), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
