--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -19,7 +19,7 @@
         <td><%= job.location %></td>
         <td><%= raw job.responsibilities %></td>
         <td><%= link_to 'Edit', edit_admin_job_path(job) %></td>
-        <td><%= link_to 'Destroy', admin_job_path(job), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Delete', admin_job_path(job), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
