update jobs DB fields, index

--- a/app/views/careers/show.haml
+++ b/app/views/careers/show.haml
@@ -22,7 +22,7 @@
           %tr
             %td.job-title= job.title
             %td.job-detail= job.location
-            %td.job-detail= raw job.responsibilities
+            %td.job-detail= raw job.description
             %td.job-link
               %a 
                 Position Details
