--- a/app/views/abouts/show.haml
+++ b/app/views/abouts/show.haml
@@ -21,10 +21,11 @@
       %h3.c-drk-gray= @about.area2_title
     .small-12.medium-7.columns
       %p= @about.area2_copy
-%hr
-.strata
-  .row
-    .small-12.medium-5.columns
-      %h3.c-drk-gray= @about.area3_title
-    .small-12.medium-7.columns
-      %p= @about.area3_copy
+- if @about.area3_title.present?
+  %hr
+  .strata
+    .row
+      .small-12.medium-5.columns
+        %h3.c-drk-gray= @about.area3_title
+      .small-12.medium-7.columns
+        %p= @about.area3_copy
