--- a/app/views/admin/jobs/_form.html.erb
+++ b/app/views/admin/jobs/_form.html.erb
@@ -22,6 +22,10 @@
     <%= f.text_area :location %>
   </div>
   <div class="field">
+    <%= f.label :description %><br>
+    <%= f.text_area :description %>
+  </div>
+  <div class="field">
     <%= f.label :responsibilities %><br>
     <%= f.text_area :responsibilities, :class => "tinymce", :id => "editor", :rows => 30, :cols => 80 %>
   </div>
