--- a/app/views/admin/jobs/index.html.erb
+++ b/app/views/admin/jobs/index.html.erb
@@ -6,6 +6,7 @@
       <th>Title</th>
       <th>Location</th>
       <th>Description</th>
+      <th>Responsibilities</th>
       <th></th>
       <th></th>
       <th></th>
@@ -17,6 +18,7 @@
       <tr>
         <td><%= job.title %></td>
         <td><%= job.location %></td>
+        <td><%= job.description %></td>
         <td><%= raw job.responsibilities %></td>
         <td><%= link_to 'Edit', edit_admin_job_path(job) %></td>
         <td><%= link_to 'Delete', admin_job_path(job), method: :delete, data: { confirm: 'Are you sure?' } %></td>
