updating job link

--- a/app/views/careers/show.haml
+++ b/app/views/careers/show.haml
@@ -25,7 +25,7 @@
             %td.job-detail= raw job.description
             %td.job-link
               %a 
-                Position Details
+                = link_to "Position Details", job_path
                 %span
                   %small{style: "padding-left: 5px;", "data-icon" => "k"}
 .strata.bgc-lght-gray
