--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -3,11 +3,11 @@
 		.small-12.medium-8.columns
 			%ul
 				%li.footer-item
-					= link_to "Meet the Team", team_path, class: "footer-link"
+					= active_link_to "Meet the Team", team_path, class: "footer-link main-footer", :class_active => "current"
 				%li.footer-item
-					= link_to "Insights", insights_path, class: "footer-link"
+					= active_link_to "Insights", insights_path, class: "footer-link main-footer", :class_active => "current"
 				%li.footer-item
-					= link_to "Contact", contact_path, class: "footer-link"
+					= active_link_to "Contact", contact_path, class: "footer-link main-footer", :class_active => "current"
 		.small-12.medium-4.columns
 			%ul{style: "float: right;"}
 				%li.footer-item
