updated db for bio intro, remove fb

--- a/app/views/admin/employees/index.html.erb
+++ b/app/views/admin/employees/index.html.erb
@@ -6,6 +6,7 @@
       <th>Picture</th>
       <th>Name</th>
       <th>Title</th>
+      <th>Bio Intro</th>
       <th>Bio</th>
       <th>Linkedin</th>
       <th>Twitter</th>
@@ -22,6 +23,7 @@
         <td><%= image_tag employee.employee_image.to_s %></td>
         <td><%= employee.name %></td>
         <td><%= employee.title %></td>
+        <td><%= employee.bio_intro %></td>
         <td><%= employee.bio %></td>
         <td><%= employee.linkedin %></td>
         <td><%= employee.twitter %></td>
