--- a/app/views/teams/show.haml
+++ b/app/views/teams/show.haml
@@ -26,7 +26,7 @@
                 %a{href: "http://" + employee.linkedin, style: "float: right;", "data-icon" => "h"}
         .row
           .small-12.columns
-            %p{style: "padding-top: 10px;"}= employee.bio
+            %p{style: "padding-top: 10px;"}= employee.bio_intro
             %a
               Read More
               %span
