--- a/app/views/admin/employees/_form.html.erb
+++ b/app/views/admin/employees/_form.html.erb
@@ -24,6 +24,10 @@
     <%= f.text_area :title %>
   </div>
   <div class="field">
+    <%= f.label :bio_intro %><br>
+    <%= f.text_area :bio_intro %>
+  </div>
+  <div class="field">
     <%= f.label :bio %><br>
     <%= f.text_area :bio %>
   </div>
@@ -34,10 +38,6 @@
   <div class="field">
     <%= f.label :twitter %><br>
     <%= f.text_area :twitter %>
-  </div>
-  <div class="field">
-    <%= f.label :facebook %><br>
-    <%= f.text_area :facebook %>
   </div>
   <div class="actions">
     <%= f.submit %>
