--- a/app/views/admin/employees/_form.html.erb
+++ b/app/views/admin/employees/_form.html.erb
@@ -29,7 +29,7 @@
   </div>
   <div class="field">
     <%= f.label :bio %><br>
-    <%= f.text_area :bio %>
+    <%= f.text_area :bio, :class => "tinymce", :id => "editor", :rows => 30, :cols => 80 %>
   </div>
   <div class="field">
     <%= f.label :linkedin %><br>
@@ -43,3 +43,5 @@
     <%= f.submit %>
   </div>
 <% end %>
+
+<%= tinymce %>
