--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -9,7 +9,7 @@
 				%li.footer-item
 					= active_link_to "Contact", contact_path, class: "footer-link main-footer", :class_active => "current"
 		.small-12.medium-4.columns
-			%ul{style: "float: right;"}
+			%ul.f-right
 				%li.footer-item
 					%h4
 						%a.footer-link{"data-icon" => "i", href: "#"}
