JJ: updating links on homepage, fixing buttons and updating button links

--- a/app/views/careers/show.haml
+++ b/app/views/careers/show.haml
@@ -34,6 +34,6 @@
       %h6.c-drk-gray= @career.cta_title
       %p{style: "padding-top: 5px;"}= @career.cta_copy
     .small-12.medium-3.columns
-      = link_to contact_path, :class => "btn-empty btn-m" do
+      = link_to contact_path, :class => "btn-empty btn-m btn-block" do
         %span.btn-text Contact Us
         %span.btn-text{ style: "float: right;", "data-icon" => "c"}
