--- a/app/views/layouts/_footer.haml
+++ b/app/views/layouts/_footer.haml
@@ -12,10 +12,10 @@
 			%ul.f-right
 				%li.footer-item
 					%h4
-						%a.footer-link{"data-icon" => "i", href: "#"}
+						%a.footer-link{"data-icon" => "i", href: "#", target: "_blank"}
 				%li.footer-item
 					%h4
-						%a.footer-link{"data-icon" => "h", href: "#"}
+						%a.footer-link{"data-icon" => "h", href: "#", target: "_blank"}
 				%li.footer-item
 					%h4
-						%a.footer-link{"data-icon" => "j", href: "#"}
+						%a.footer-link{"data-icon" => "j", href: "#", target: "_blank"}
