--- a/app/views/practiceareas/show.haml
+++ b/app/views/practiceareas/show.haml
@@ -20,7 +20,7 @@
       %h6{style: "display: inline-block; line-height: 42px; margin-bottom: 0px;"}
         %a Business Intelligence
     .small-12.medium-3.columns
-      %a.btn-empty.btn-m
+      =link_to contact_path, class: "btn-empty btn-m btn-block" do
         %span.btn-text Contact Us
         %span.btn-text{ style: "float: right;", "data-icon" => "c"}
 .strata
