--- a/app/assets/stylesheets/components/_colors.scss
+++ b/app/assets/stylesheets/components/_colors.scss
@@ -6,6 +6,7 @@
 .bgc-drk-blue       { background-color: $bloom-drk-blue; }
 
 .bgc-white          { background-color: $white; }
+.bgc-lghter-gray    { background-color: $lighter-gray; }
 .bgc-lght-gray      { background-color: $light-gray; }
 .bgc-gray           { background-color: $gray; }
 .bgc-drk-gray       { background-color: $dark-gray; }
@@ -19,6 +20,7 @@
 .c-drk-blue       { color: $bloom-drk-blue; }
 
 .c-white          { color: $white; }
+.c-lghter-gray    { color: $lighter-gray; }
 .c-lght-gray      { color: $light-gray; }
 .c-gray           { color: $gray; }
 .c-drk-gray       { color: $dark-gray; }
