--- a/app/views/careers/show.haml
+++ b/app/views/careers/show.haml
@@ -28,7 +28,7 @@
                 = link_to "Position Details", job_path
                 %span
                   %small{style: "padding-left: 5px;", "data-icon" => "k"}
-.strata.bgc-lght-gray
+.strata.bgc-lghter-gray
   .row
     .small-12.medium-9.columns
       %h6.c-drk-gray= @career.cta_title
