--- a/app/views/contacts/show.haml
+++ b/app/views/contacts/show.haml
@@ -8,7 +8,7 @@
     .small-12.medium-6.columns
       %iframe.b-gray{src: "http://www.bing.com/maps/embed/viewer.aspx?v=3&cp=47.672935~-122.123372&lvl=16&w=500&h=400&sty=r&typ=d&pp=~~47.672285~-122.123587&ps=&dir=0&mkt=en-us&src=SHELL&form=BMEMJS", width: "100%", height: "300", frameborder: "0"}
     .small-12.medium-6.columns
-      .row.bgc-lght-gray{style: "padding: 20px;"}
+      .row.bgc-lghter-gray{style: "padding: 20px;"}
         .small-1.columns
           %p.c-drk-gray.ta-centered{"data-icon" => "e"}
         .small-11.columns
@@ -19,7 +19,7 @@
           %p.c-drk-gray.ta-centered{"data-icon" => "g"}
         .small-11.columns
           %p= @contact.phone
-      .row.bgc-lght-gray{style: "padding: 20px;"}
+      .row.bgc-lghter-gray{style: "padding: 20px;"}
         .small-1.columns
           %p.c-drk-gray.ta-centered{"data-icon" => "f"}
         .small-11.columns
