--- a/app/views/practiceareas/show.haml
+++ b/app/views/practiceareas/show.haml
@@ -1,5 +1,5 @@
 - image = @practicearea.hero_image_url(:thumb)
-.large-hero{style: "background-image: url(#{image});"}
+.large-hero.fixed-image{style: "background-image: url(#{image});"}
   = render 'layouts/header'
   .hero
     .row
@@ -8,36 +8,36 @@
           = @practicearea.hero_title
         %p{style: "text-align: center; padding-top: 15px; color: #fff; padding-bottom: 80px;"}
           = @practicearea.hero_copy
-.strata-small.bgc-lght-gray{style: "border-bottom: 1px solid #ddd;"}
+.strata-small.bgc-lghter-gray.b-bottom-light-gray.w-100.z-999{"data-magellan-expedition" => "fixed"}
   .row
     .small-12.medium-9.columns
-      %h6{style: "display: inline-block; padding-left: 5px; line-height: 42px; margin-bottom: 0px;"}
+      %h6.target-jump{style: "display: inline-block; padding-left: 5px; line-height: 42px; margin-bottom: 0px;", "data-target" => "pm"}
         %a Project Management
       %h6{style: "display: inline-block; padding-left: 5px; color: #ddd; line-height: 42px; margin-bottom: 0px;"} &#124;
-      %h6{style: "display: inline-block; padding-left: 5px; line-height: 42px; margin-bottom: 0px;"}
+      %h6.target-jump{style: "display: inline-block; padding-left: 5px; line-height: 42px; margin-bottom: 0px;", "data-target" => "mc"}
         %a Management Consulting
       %h6{style: "display: inline-block; padding-left: 5px; color: #ddd; line-height: 42px; margin-bottom: 0px;"} &#124;
-      %h6{style: "display: inline-block; line-height: 42px; margin-bottom: 0px;"}
+      %h6.target-jump{style: "display: inline-block; line-height: 42px; margin-bottom: 0px;", "data-target" => "bi"}
         %a Business Intelligence
     .small-12.medium-3.columns
       =link_to contact_path, class: "btn-empty btn-m btn-block" do
         %span.btn-text Contact Us
         %span.btn-text{ style: "float: right;", "data-icon" => "c"}
-.strata
+.strata#pm
   .row
     .small-12.medium-5.columns
       %h3.c-drk-gray= @practicearea.pa1_title
     .small-12.medium-7.columns
       %p= @practicearea.pa1_copy
 %hr
-.strata
+.strata#mc
   .row
     .small-12.medium-5.columns
       %h3.c-drk-gray= @practicearea.pa2_title
     .small-12.medium-7.columns
       %p= @practicearea.pa2_copy
 %hr
-.strata
+.strata#bi
   .row
     .small-12.medium-5.columns
       %h3.c-drk-gray= @practicearea.pa3_title
