JJ: read more javascript working

--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -53,8 +53,12 @@
 	}
 }
 
-.btn-text {
+.btn-text, .btn-icon {
 	position: relative;
 	top: 2px;
+	span[data-icon] {
+		position: relative;
+		top: 3px;
+	}
 }
 
