--- a/app/views/abouts/show.haml
+++ b/app/views/abouts/show.haml
@@ -1,5 +1,5 @@
 - image = @about.hero_image_url(:thumb)
-.large-hero{style: "background-image: url(#{image});"}
+.large-hero.fixed-image{style: "background-image: url(#{image});"}
   = render 'layouts/header'
   .hero
     .row
