--- a/app/views/careers/show.haml
+++ b/app/views/careers/show.haml
@@ -1,5 +1,5 @@
 - image = @career.hero_image
-.large-hero{style: "background-image: url(#{image});"}
+.large-hero.fixed-image{style: "background-image: url(#{image});"}
   = render 'layouts/header'
   .hero
     .row
