--- a/app/assets/stylesheets/components/_buttons.scss
+++ b/app/assets/stylesheets/components/_buttons.scss
@@ -1,7 +1,5 @@
-.btn-filled {
+.btn {
 	border-radius: 3px;
-	color: $white;
-	background-color: $bloom-orange;
 	text-transform: uppercase;
 	width: 100%;
 	vertical-align: middle;
@@ -13,28 +11,23 @@
 	@include ie7-inline-block();
 }
 
+.btn-filled {
+	background-color: $bloom-orange;
+	color: $white;
+}
+
+.btn-empty {
+	color: $bloom-orange;
+	border: 1px solid $bloom-orange;
+	background-color: transparent;
+}
+
 .btn-block {
 	display: block;
 }
 
 .btn-c-318 {
 	width: 318px;
-}
-
-.btn-empty {
-	border-radius: 3px;
-	color: $bloom-orange;
-	border: 1px solid $bloom-orange;
-	background-color: transparent;
-	text-transform: uppercase;
-	width: 100%;
-	vertical-align: middle;
-	&:hover {
-		background-color: $bloom-orange;
-		color: $white
-	}
-	@include transition (all 0.2s ease-in-out);
-	@include ie7-inline-block();
 }
 
 .btn-m {
