--- a/app/assets/stylesheets/components/_colors.scss
+++ b/app/assets/stylesheets/components/_colors.scss
@@ -11,6 +11,8 @@
 .bgc-gray           { background-color: $gray; }
 .bgc-drk-gray       { background-color: $dark-gray; }
 
+.bgc-huskies        { background-color: $huskies; }
+
 
 // Font Colors
 .c-blue           { color: $bloom-blue; }
@@ -24,3 +26,5 @@
 .c-lght-gray      { color: $light-gray; }
 .c-gray           { color: $gray; }
 .c-drk-gray       { color: $dark-gray; }
+
+.c-huskies        { color: $huskies; }
