--- a/app/assets/stylesheets/components/_strata.scss
+++ b/app/assets/stylesheets/components/_strata.scss
@@ -5,3 +5,9 @@
 .strata-small {
 	padding: 20px 0px;
 }
+
+.blue-overlay {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(31,73,125,0.4);
+}
