--- a/app/assets/stylesheets/components/_typography.scss
+++ b/app/assets/stylesheets/components/_typography.scss
@@ -11,3 +11,12 @@
 		color: $white;
 	}
 }
+
+.hero-font {
+  font-size: rem(48px);
+}
+
+// Line Height for Medium Buttons
+.lh-btn-m {
+  line-height: 42px;
+}
