--- a/app/assets/stylesheets/components/components.scss
+++ b/app/assets/stylesheets/components/components.scss
@@ -2,6 +2,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 
 @import 'box-model';
+@import 'displays';
 @import 'floats';
 @import 'colors';
 @import 'borders';
