--- a/app/views/teams/show.haml
+++ b/app/views/teams/show.haml
@@ -1,40 +1,40 @@
 = render "layouts/header"
 
 .strata-small
-  .row{style: "padding-top: 30px;"}
+  .row.p-top-30
     .small-12.columns
       %h3.c-drk-gray= @team.intro_title
   .row
     .small-12.large-9.columns
-      %p{style: "padding-top: 5px;"}= @team.intro_copy
+      %p.p-top-5= @team.intro_copy
 - employees = Employee.all
 - employees.each do |employee|
   .strata-small.strata-striped
-    .row{style: "padding: 20px;"}
+    .row.p-20
       .small-12.medium-3.columns
-        = image_tag employee.employee_image, width: "100%"
+        = image_tag employee.employee_image, class: "w-100"
       .small-12.medium-9.columns
         .row
           .small-8.columns
             %h5
-              .c-drk-gray{style: "display: inline-block;"}= employee.name + ","
+              .c-drk-gray.d-inline-block= employee.name + ","
               = employee.title
           .small-4.columns
             - if employee.linkedin.present?
               %h5
-                %a{href: "http://" + employee.linkedin, target: "_blank", style: "float: right; margin-left: 10px;", "data-icon" => "i"}
+                %a.f-right.m-left-10{href: "http://" + employee.linkedin, target: "_blank", "data-icon" => "i"}
             - if employee.twitter.present?
               %h5
-                %a{href: "http://" + employee.twitter, target: "_blank", style: "float: right;", "data-icon" => "h"}
+                %a.f-right{href: "http://" + employee.twitter, target: "_blank", "data-icon" => "h"}
         .row
           .small-12.columns
-            %p{style: "padding-top: 10px;"}= employee.bio_intro
+            %p.p-top-10= employee.bio_intro
             %div.bio-hide
-              %p.full-bio{style: "margin: 0px;"}= raw employee.bio
+              %p.full-bio.m-0= raw employee.bio
             - if employee.bio.present?
               %a.bio-toggle
                 %span.btn-text
-                %span{style: "padding-left: 5px;"}
+                %span.p-left-5
                   %small.btn-icon{"data-icon" => ""}
 
 
