--- a/app/assets/stylesheets/base/_typography.scss
+++ b/app/assets/stylesheets/base/_typography.scss
@@ -5,6 +5,10 @@ html, body, p {
 	font-family: 'MuseoSans-500', Arial, sans-serif;
 }
 
+p small {
+  line-height: 1rem;
+}
+
 a {
   color: $base-link-color;
   text-decoration: none;
