--- a/app/views/abouts/show.haml
+++ b/app/views/abouts/show.haml
@@ -4,9 +4,9 @@
   .hero
     .row
       .small-12.medium-10.medium-offset-1.columns
-        %h1{style: "font-size: 48px; color: #fff; text-align: center;"}
+        %h1.ta-center.c-white.hero-font
           = @about.hero_title
-        %p{style: "text-align: center; padding-top: 15px; color: #fff; padding-bottom: 80px;"}
+        %p.ta-center.p-top-15.c-white.p-bottom-80
           = @about.hero_copy
 .strata
   .row
