--- a/app/views/abouts/show.haml
+++ b/app/views/abouts/show.haml
@@ -13,14 +13,14 @@
     .small-12.medium-5.columns
       %h3.c-blue= @about.area1_title
     .small-12.medium-7.columns
-      %p= @about.area1_copy
+      %p= raw @about.area1_copy
 %hr
 .strata
   .row
     .small-12.medium-5.columns
       %h3.c-blue= @about.area2_title
     .small-12.medium-7.columns
-      %p= @about.area2_copy
+      %p= raw @about.area2_copy
 - if @about.area3_title.present?
   %hr
   .strata
@@ -28,4 +28,4 @@
       .small-12.medium-5.columns
         %h3.c-blue= @about.area3_title
       .small-12.medium-7.columns
-        %p= @about.area3_copy
+        %p= raw @about.area3_copy
