--- a/app/views/teams/show.haml
+++ b/app/views/teams/show.haml
@@ -12,7 +12,7 @@
   .strata-small.strata-striped
     .row.p-20
       .small-12.medium-3.columns
-        = image_tag employee.employee_image, class: "w-100"
+        = image_tag employee.employee_image.profile, class: "w-100 b-light-gray"
       .small-12.medium-9.columns
         .row
           .small-8.columns
