--- a/app/views/admin/abouts/_form.html.erb
+++ b/app/views/admin/abouts/_form.html.erb
@@ -37,7 +37,7 @@
   </div>
   <div class="field">
     <%= f.label :area2_copy %><br>
-    <%= f.text_area :area2_copy, :class => "tinymce", :id => "editor", :rows => 30, :cols => 80 %>
+    <%= f.text_area :area2_copy, :class => "tinymce", :id => "editor2", :rows => 30, :cols => 80 %>
   </div>
   <div class="field">
     <%= f.label :area3_title %><br>
@@ -45,7 +45,7 @@
   </div>
   <div class="field">
     <%= f.label :area3_copy %><br>
-    <%= f.text_area :area3_copy, :class => "tinymce", :id => "editor", :rows => 30, :cols => 80 %>
+    <%= f.text_area :area3_copy, :class => "tinymce", :id => "editor3", :rows => 30, :cols => 80 %>
   </div>
   <div class="actions">
     <%= f.submit %>
